--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-06  Tom Tromey  <tromey@cygnus.com>
+
+	* lang-specs.h: Also recognize `-femit-class-files'.
+
 2000-09-02  Anthony Green  <green@redhat.com>
 
 	* jcf-io.c: Include zlib.h.
