* java/lang/reflect/Constructor.java (toString): Use `getName' for 	parameter types. 	* java/lang/reflect/Method.java (toString): Use `getName' for 	return type.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36214 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2000-09-06  Tom Tromey  <tromey@cygnus.com>
 
+	* java/lang/reflect/Constructor.java (toString): Use `getName' for
+	parameter types.
+	* java/lang/reflect/Method.java (toString): Use `getName' for
+	return type.
+
 	* java/lang/reflect/natMethod.cc (_Jv_CallAnyMethodA): Accept null
 	`args' if method takes no parameters.
 
