* config/i386/i386.h (ADDRESS_COST): Fix typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36217 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-06  Graham Stott  <grahams@cygnus.co.uk>
+
+        * config/i386/i386.h (ADDRESS_COST): Fix typo.
+
 2000-09-06  Zack Weinberg  <zack@wolery.cumb.org>
 
 	Integrated preprocessor.
