--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-06  Kazu Hirata  <kazu@hxi.com>
+
+	* calls.c: Fix formatting.
+
 2000-09-06  Graham Stott  <grahams@cygnus.co.uk>
 
         * config/i386/i386.h (ADDRESS_COST): Fix typo.
